5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4424/executions/1747_3095.log
== TEST (2019-05-16 10:39:22) 
-- CODE:
res=float(input("x: ")) .upper()

soma=0
i=0
fim=x

V=3
E=2
D=1

while(res>0) and (res<4):
	soma=soma+V+E+D
	i=i+1
	
	if(res==V):
		x=(v+res)
		print(x)
	elif(res==E):
		y=y+res
		print(y)
	elif(res==D)
		z=z+res
		print(z)
	else:
		res=int(input("x: ")) .upper
-- ERROR:
File "XXXX", line 21
    elif(res==D)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:39:44) 
-- CODE:
res=float(input("x: ")) .upper()

soma=0
i=0
fim=x

V=3
E=2
D=1

while(res>0) and (res<4):
	soma=soma+V+E+D
	i=i+1
	
	if(res==V):
		x=(v+res)
		print(x)
	elif(res==E):
		y=y+res
		print(y)
	elif(res==E)
		z=z+res
		print(z)
	else:
		res=int(input("x: ")) .upper
-- ERROR:
File "XXXX", line 21
    elif(res==E)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:41:08) 
-- CODE:
res=float(input("x: ")) .upper()

soma=0
i=0
fim=x

V==3
E==2
D==1

while(res>0) and (res<4):
	soma=soma+V+E+D
	i=i+1
	
	if(res==V):
		x=(v+res)
		print(x)
	elif(res==E):
		y=y+res
		print(y)
	elif(res==D)
		z=z+res
		print(z)
	else:
		res=int(input("x: ")) .upper
-- ERROR:
File "XXXX", line 21
    elif(res==D)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:41:27) 
-- CODE:
res=float(input("x: ")) .upper()

soma=0
i=0
fim=x

V=3
E=2
D=1

while(res>0) and (res<4):
	soma=soma+V+E+D
	i=i+1
	
	if(res=V):
		x=(v+res)
		print(x)
	elif(res=E):
		y=y+res
		print(y)
	elif(res=D)
		z=z+res
		print(z)
	else:
		res=int(input("x: ")) .upper
-- ERROR:
File "XXXX", line 15
    if(res=V):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:45:16) 
-- CODE:
res=float(input("x: ")) .upper()

soma=0
i=0
fim=x

v=3
e=2
d=1

while(res==V) and (res==E) and (res==D):
	soma=soma+res*V*E*I
	i=i+1
	
	if(res==v):
		x=(v+res)
		print(x)
	elif(res==e):
		y=y+res
		print(y)
	elif(res==d)
		z=z+res
		print(z)
	else:
		res=int(input("x: ")) .upper
-- ERROR:
File "XXXX", line 21
    elif(res==d)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:45:51) 
-- CODE:
res=float(input("x: ")) .upper()

soma=0
i=0
fim=x

v=3
e=2
d=1

while(res==V) and (res==E) and (res==D):
	soma=soma+res*V*E*I
	i=i+1
	
	if(res==3):
		x=(v+res)
		print(x)
	elif(res==2):
		y=y+res
		print(y)
	elif(res==1)
		z=z+res
		print(z)
	else:
		res=int(input("x: ")) .upper
-- ERROR:
File "XXXX", line 21
    elif(res==1)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:46:26) 
-- CODE:
res=float(input("x: ")) .upper()

soma=0
i=0
fim=x

v=3
e=2
d=1

while(res==V) and (res==E) and (res==D):
	soma=soma+res*V*E*I
	i=i+1
	
	if(res==v):
		x=(v+res)
		print(x)
	elif(res==e):
		y=e+res
		print(y)
	elif(res==d):
		z=d+res
		print(z)
	else:
		res=int(input("x: ")) .upper
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    res=float(input()) .upper()
ValueError: could not convert string to float: 'v'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:47:01) 
-- CODE:
res=int(input("x: ")) .upper()

soma=0
i=0
fim=x

v=3
e=2
d=1

while(res==V) and (res==E) and (res==D):
	soma=soma+res*V*E*I
	i=i+1
	
	if(res==v):
		x=(v+res)
		print(x)
	elif(res==e):
		y=e+res
		print(y)
	elif(res==d):
		z=d+res
		print(z)
	else:
		res=int(input("x: ")) .upper
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    res=int(input()) .upper()
ValueError: invalid literal for int() with base 10: 'v'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:47:07) 
-- CODE:
res=int(input("x: ")) .upper()

soma=0
i=0
fim=x

v=3
e=2
d=1

while(res==V) and (res==E) and (res==D):
	soma=soma+res*V*E*I
	i=i+1
	
	if(res==v):
		x=(v+res)
		print(x)
	elif(res==e):
		y=e+res
		print(y)
	elif(res==d):
		z=d+res
		print(z)
	else:
		res=int(input("x: ")) .upper
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    res=int(input()) .upper()
ValueError: invalid literal for int() with base 10: 'v'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:47:36) 
-- CODE:
res=(input("x: ")) .upper()

soma=0
i=0
fim=x

v=3
e=2
d=1

while(res==V) and (res==E) and (res==D):
	soma=soma+res*V*E*I
	i=i+1
	
	if(res==v):
		x=(v+res)
		print(x)
	elif(res==e):
		y=e+res
		print(y)
	elif(res==d):
		z=d+res
		print(z)
	else:
		res=input("x: ")) .upper
-- ERROR:
File "XXXX", line 25
    res=input()) .upper
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:47:46) 
-- CODE:
res=input("x: ") .upper()

soma=0
i=0
fim=x

v=3
e=2
d=1

while(res==V) and (res==E) and (res==D):
	soma=soma+res*V*E*I
	i=i+1
	
	if(res==v):
		x=(v+res)
		print(x)
	elif(res==e):
		y=e+res
		print(y)
	elif(res==d):
		z=d+res
		print(z)
	else:
		res=input("x: ") .upper
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    fim=x
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:48:05) 
-- CODE:
res=input("x: ") .upper()

soma=0
i=0
fim="x"

v=3
e=2
d=1

while(res==V) and (res==E) and (res==D):
	soma=soma+res*V*E*I
	i=i+1
	
	if(res==v):
		x=(v+res)
		print(x)
	elif(res==e):
		y=e+res
		print(y)
	elif(res==d):
		z=d+res
		print(z)
	else:
		res=input("x: ") .upper
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    while(res==V) and (res==E) and (res==D):
NameError: name 'V' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:48:21) 
-- CODE:
res=input("x: ") .upper()

soma=0
i=0
fim="x"

v=3
e=2
d=1

while(res==v) and (res==e) and (res==d):
	soma=soma+res*V*E*I
	i=i+1
	
	if(res==v):
		x=(v+res)
		print(x)
	elif(res==e):
		y=e+res
		print(y)
	elif(res==d):
		z=d+res
		print(z)
	else:
		res=input("x: ") .upper
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    while(res==V) and (res==E) and (res==D):
NameError: name 'V' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:48:42) 
-- CODE:
res=input("x: ") .upper()

soma=0
i=0
fim="x"

v=3
e=2
d=1

while(res==v) and (res==e) and (res==d):
	soma=soma+res*V*E*I
	i=i+1
	
	if(res==v):
		x=(v+res)
		print(x)
	elif(res==e):
		y=e+res
		print(y)
	elif(res==d):
		z=d+res
		print(z)
	else:
		res=input("x: ") .upper
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    while(res==V) and (res==E) and (res==D):
NameError: name 'V' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 10:48:51) 
-- CODE:
res=input("x: ") .upper()

soma=0
i=0
fim="x"

v=3
e=2
d=1

while(res==v) and (res==e) and (res==d):
	soma=soma+res*V*E*I
	i=i+1
	
	if(res==v):
		x=(v+res)
		print(x)
	elif(res==e):
		y=e+res
		print(y)
	elif(res==d):
		z=d+res
		print(z)
	else:
		res=input("x: ") .upper
-- EXECUTION TIME:
0.214791
-- TEST CASE 1:
---- input:
v
V
E
D
D
a
b
c
d
X
---- correct output:
6
2
3
---- user output:

-- TEST CASE 2:
---- input:
V
E
C
B
A
X
---- correct output:
3
2
0
---- user output:

-- TEST CASE 3:
---- input:
A
A
v
v
V
V
X
---- correct output:
12
0
0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:49:07) 
-- CODE:
res=input("x: ") .upper()

soma=0
i=0
fim="x"

v=3
e=2
d=1

while(res==v) and (res==e) and (res==d):
	soma=soma+res
	i=i+1
	
	if(res==v):
		x=(v+res)
		print(x)
	elif(res==e):
		y=e+res
		print(y)
	elif(res==d):
		z=d+res
		print(z)
	else:
		res=input("x: ") .upper
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    while(res==V) and (res==E) and (res==D):
NameError: name 'V' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:49:20) 
-- CODE:
res=input("x: ") .upper()

soma=0
i=0
fim="x"

v=3
e=2
d=1

while(res==v) and (res==e) and (res==d):
	soma=soma+res
	i=i+1
	
	if(res==v):
		x=(v+res)
		print(x)
	elif(res==e):
		y=e+res
		print(y)
	elif(res==d):
		z=d+res
		print(z)

res=input("x: ") .upper
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    while(res==V) and (res==E) and (res==D):
NameError: name 'V' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:49:35) 
-- CODE:
res=input("x: ") .upper()

soma=0
i=0
fim="x"

v=3
e=2
d=1

while(res==v) and (res==e) and (res==d):
	soma=soma+res
	i=i+1
	
	if(res==v):
		x=(v+res)
		print(x)
	elif(res==e):
		y=e+res
		print(y)
	elif(res==d):
		z=d+res
		print(z)

	res=input("x: ") .upper
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    while(res==V) and (res==E) and (res==D):
NameError: name 'V' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:49:39) 
-- CODE:
res=input("x: ") .upper()

soma=0
i=0
fim="x"

v=3
e=2
d=1

while(res==v) and (res==e) and (res==d):
	soma=soma+res
	i=i+1
	
	if(res==v):
		x=(v+res)
		print(x)
	elif(res==e):
		y=e+res
		print(y)
	elif(res==d):
		z=d+res
		print(z)

	res=input("x: ") .upper
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    while(res==V) and (res==E) and (res==D):
NameError: name 'V' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:49:46) 
-- CODE:
res=input("x: ") .upper()

soma=0
i=0
fim="x"

v=3
e=2
d=1

while(res==v) and (res==e) and (res==d):
	soma=soma+res
	i=i+1
	
	if(res==v):
		x=(v+res)
		print(x)
	elif(res==e):
		y=e+res
		print(y)
	elif(res==d):
		z=d+res
		print(z)

	res=input("x: ") .upper
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    while(res==V) and (res==E) and (res==D):
NameError: name 'V' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:49:52) 
-- CODE:
res=input("x: ") .upper()

soma=0
i=0
fim="x"

v=3
e=2
d=1

while(res==v) and (res==e) and (res==d):
	soma=soma+res
	i=i+1
	
	if(res==v):
		x=(v+res)
		print(x)
	elif(res==e):
		y=e+res
		print(y)
	elif(res==d):
		z=d+res
		print(z)

		res=input("x: ") .upper
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    while(res==V) and (res==E) and (res==D):
NameError: name 'V' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:50:12) 
-- CODE:
res=input("x: ") .upper()

soma=0
i=0
fim="x"

v=3
e=2
d=1

while(res>0):
	soma=soma+res
	i=i+1
	
	if(res==v):
		x=(v+res)
		print(x)
	elif(res==e):
		y=e+res
		print(y)
	elif(res==d):
		z=d+res
		print(z)

		res=input("x: ") .upper
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    while(res>0):
TypeError: '>' not supported between instances of 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:50:43) 
-- CODE:
res=input("x: ") .upper()

soma=0
i=0
fim="x"

v=3
e=2
d=1

while(res<fim):
	soma=soma+res
	i=i+1
	
	if(res==v):
		x=(v+res)
		print(x)
	elif(res==e):
		y=e+res
		print(y)
	elif(res==d):
		z=d+res
		print(z)

		res=input("x: ") .upper
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    soma=soma+res
TypeError: unsupported operand type(s) for +: 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:51:11) 
-- CODE:
res=input("x: ") .upper()

soma=0
i=0
fim="x"

v=3
e=2
d=1

while(res<fim):
	soma=soma*res
	i=i+1
	
	if(res==v):
		x=(v+res)
		print(x)
	elif(res==e):
		y=e+res
		print(y)
	elif(res==d):
		z=d+res
		print(z)

	res=input("x: ") .upper
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    while(res<fim):
TypeError: '<' not supported between instances of 'builtin_function_or_method' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:51:30) 
-- CODE:
res=input("x: ") .upper()

soma=0
i=0
fim="x"

v=3
e=2
d=1

while(res<=fim):
	soma=soma*res
	i=i+1
	
	if(res==v):
		x=(v+res)
		print(x)
	elif(res==e):
		y=e+res
		print(y)
	elif(res==d):
		z=d+res
		print(z)

	res=input("x: ") .upper
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    while(res<=fim):
TypeError: '<=' not supported between instances of 'builtin_function_or_method' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:51:52) 
-- CODE:
res=input("x: ") .upper()

soma=0
i=0
fim=k

v=3
e=2
d=1

while(res<fim):
	soma=soma*res
	i=i+1
	
	if(res==v):
		x=(v+res)
		print(x)
	elif(res==e):
		y=e+res
		print(y)
	elif(res==d):
		z=d+res
		print(z)

	res=input("x: ") .upper
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    fim=k
NameError: name 'k' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:52:08) 
-- CODE:
res=input("x: ") .upper()

soma=0

v=3
e=2
d=1

while(res<fim):
	soma=soma*res
	i=i+1
	
	if(res==v):
		x=(v+res)
		print(x)
	elif(res==e):
		y=e+res
		print(y)
	elif(res==d):
		z=d+res
		print(z)

	res=input("x: ") .upper
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    while(res<fim):
NameError: name 'fim' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:54:03) 
-- CODE:
res=input("x: ") .upper()

soma=0
i=1

v=3
e=2
d=1

while(res<i):
	soma=soma*res
	i=i+1
	
	if(res==v):
		x=(v+res)
		print(x)
	elif(res==e):
		y=e+res
		print(y)
	elif(res==d):
		z=d+res
		print(z)

	res=input("x: ") .upper
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    while(res<i):
TypeError: '<' not supported between instances of 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:54:22) 
-- CODE:
res=input("x: ") .upper()

soma=0
i=1

v=3
e=2
d=1

while(i<=0):
	soma=soma*res
	i=i+1
	
	if(res==v):
		x=(v+res)
		print(x)
	elif(res==e):
		y=e+res
		print(y)
	elif(res==d):
		z=d+res
		print(z)

	res=input("x: ") .upper
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    while(res<i):
TypeError: '<' not supported between instances of 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
